# mesa

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/dashboard/: .gitignore  package-lock.json  package.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/lib/: agent-chat-script.ts  agent-fixtures.ts  agent-store.ts  agent-templates.ts  analytics-fixtures.ts  api.ts  (+8 more)
docs/architecture/: transcript-and-commitments.md
migrations/: env.py
migrations/versions/: a3c2b1d4e5f6_commitment_and_capabilities.py  b4d3c2e1f7a8_policy_table.py  c5e4d3f2a9b1_deliberations_and_turns.py  f86b954fa2a2_principal_table.py
schemas/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/mesa_sdk/: __init__.py  client.py  envelope.py  errors.py  keys.py  models.py
sdk/python/tests/: conftest.py  test_client.py  test_commitments.py  test_deliberations.py  test_envelope.py  test_errors.py  test_keys.py
server/: audit.py  config.py  db.py  deps.py  errors.py  main.py  models.py  policy.py  schema.py
server/api/: main.py
server/deliberations/: __init__.py  pipeline.py  service.py  state.py
server/events/: __init__.py  chain.py  envelope.py
server/identity/: __init__.py  keys.py  tokens.py
server/routers/: __init__.py  approvals.py  commitments.py  deliberations.py  health.py  principals.py  ws.py
tests/: conftest.py  test_admin_gate.py  test_commitments_router.py  test_deliberations_router.py  test_identity_keys.py  test_policy.py  test_principals_router.py  test_schema_validator.py  test_schemas_validate.py
(+107 files in other folders)
